Start Integrate Backend with Frontend routes and API

--- a/frontend/src/style/basic/_layout.scss
+++ b/frontend/src/style/basic/_layout.scss
@@ -3,3 +3,10 @@
   margin: auto;
   padding: 0 2rem;
 }
+
+.wrapper {
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  width: 375px;
+}
