--- a/frontend/src/style/components/_navbar.scss
+++ b/frontend/src/style/components/_navbar.scss
@@ -71,7 +71,8 @@ nav ul .search-icon .icon {
   border-radius: 0 5px 5px 0;
   cursor: pointer;
   position: relative;
-  right: 40px;
+  right: 35px;
+  top: 2px;
 }
 
 nav ul .search-icon .icon:hover {
