--- a/frontend/src/style/components/_home.scss
+++ b/frontend/src/style/components/_home.scss
@@ -1,8 +1,8 @@
 .home-wrapper {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 0.5rem;
-  margin: 2rem auto;
+  grid-gap: 1rem;
+  margin-top: 2rem;
 }
 
 .home-card {
@@ -15,10 +15,11 @@
   border-radius: 20px;
   box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
   padding-bottom: 0.5rem;
+  font-family: Varela;
 }
 
 .home-card h2 {
-  font-size: 0.8rem;
+  font-size: 0.7rem;
 }
 
 .home-card h3 {
