--- a/frontend/src/style/basic/_input.scss
+++ b/frontend/src/style/basic/_input.scss
@@ -4,6 +4,7 @@ input[type='password'],
 input[type='date'],
 input[type='number'],
 input[type='tel'],
+input[type='time'],
 select,
 textarea {
   display: block;
