Implement Delete Movie Functionality

--- a/frontend/src/style/components/_modal.scss
+++ b/frontend/src/style/components/_modal.scss
@@ -2,8 +2,8 @@
   background-color: #f7f8fc;
   border-radius: 15px;
   margin: 0.5rem auto;
-  width: 345px;
-  height: 80vh;
+  width: 85%;
+  height: 92%;
   outline: none;
   z-index: 10;
   opacity: 1;
@@ -51,4 +51,48 @@
 
 .modal-header span {
   font-size: 1.5rem;
+}
+
+.modal-body {
+  font-family: Varela;
+  direction: rtl;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+}
+
+.modal-body img {
+  width: 35%;
+  height: 35%;
+  margin: 0.5rem auto;
+  border-radius: 10px;
+}
+
+.modal-body small {
+  color: #666;
+}
+
+.modal-body p {
+  font-size: 1.3rem;
+}
+
+.modal-body p span {
+  color: $primary-color;
+}
+
+.modal-footer {
+  margin-top: 1rem;
+  display: flex;
+  justify-content: center;
+  margin: auto;
+}
+
+.modal-footer button {
+  margin: 0 0.5rem;
+}
+
+.modal-kdm {
+  font-size: 1rem !important;
 }
