--- a/frontend/src/style/components/_modal.scss
+++ b/frontend/src/style/components/_modal.scss
@@ -2,7 +2,7 @@
   background-color: #f7f8fc;
   border-radius: 15px;
   margin: 0.5rem auto;
-  width: 85%;
+  width: 90%;
   height: 92%;
   outline: none;
   z-index: 10;
@@ -76,6 +76,8 @@
 
 .modal-body p {
   font-size: 1.3rem;
+  margin: auto;
+  text-align: center;
 }
 
 .modal-body p span {
